--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "enableNonBrowserBranches": true
   },
   "dependencies": {
+    "vue-demi": "^0.11.2",
     "@antfu/utils": "^0.1.6",
     "@headlessui/vue": "^1.2.0",
     "@types/splitpanes": "^2.2.0",
